# guardrail-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  install_hook.py  main.py  models.py  orchestrator_stub.py  pyproject.toml  railway.json  requirements.txt  security.yml  test_eval_case.py  test_explain.py  test_password_case.py  test_vuln_demo.py
ai/: __init__.py  claude.py  client.py  deep_scan.py  explain.py  fix.py  orchestrator.py  parser.py  prompts.py  second_pass.py
audit/: logger.py
cli/: __init__.py  main.py
examples/: sneaky_vulns.py  vulnerable_demo.py
fixtures/security_lab/: README.md  main.py
fixtures/security_lab/app/: __init__.py  config.py  crypto_utils.py  database.py  expression_engine.py  process_runner.py  safe_examples.py  serialization.py  tempfiles.py  tokens.py  yaml_handlers.py
fixtures/security_lab_v2/: README.md  main.py  requirements.txt
fixtures/security_lab_v2/app/: __init__.py  archives.py  authz.py  crypto_configs.py  deserialization.py  directory_queries.py  file_access.py  jwt_examples.py  process_variants.py  safe_examples.py  secrets_store.py  templates.py  web_endpoints.py  xml_processing.py
functional/: __init__.py  claude_client.py  engine.py  models.py  reporter.py  runner.py
hooks/: manager.py
pentest/: __init__.py  api.py  endpoint_parser.py  engine.py  models.py  reporting.py  runner_app.py  runtime.py  url_engine.py
policy/: default.yml  engine.py
rules/: __init__.py  advanced.yml  eval.yml  python-security-extended.yml  python-security.yml  secrets-extended.yml  secrets.yml
scanner/: __init__.py  heuristics.py  parser.py  semgrep_runner.py
shared/: __init__.py  context.py  models.py  redaction.py
tests/: test_ai_pipeline.py  test_cli.py  test_pentest_engine.py  test_pentest_parser.py  test_pentest_planner.py  test_pentest_reporting.py  test_pentest_runner_app.py  test_pentest_runtime.py  test_pentest_url.py  test_scanner_heuristics.py  test_scanner_parser.py  test_semgrep_rules.py
watcher/: daemon.py  file_watcher.py
web/: app.py
web/static/: index.html
