[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrail-ai"
version = "0.2.0"
description = "Universal safety layer: scan, watch, block, explain, fix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "requests>=2.31,<3.0",
  "rich>=13.7,<14.0",
  "typer>=0.12,<1.0",
  "semgrep==1.156.0",
  "watchdog>=4.0,<5.0",
  "pyyaml>=6.0,<7.0",
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
]

[project.scripts]
guardrail = "cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai", "cli", "rules", "scanner", "shared", "policy", "audit", "watcher", "hooks", "web"]

[tool.setuptools.package-data]
rules = ["*.yml"]
policy = ["*.yml"]
web = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
